Fix server crash from cgroup MemoryMax; make RAM config install-time only
The cgroup MemoryMax=12288M cap (added in 4cf24ba) throttled/OOM-killed PZ
once it hit the ceiling on this 14 GiB machine, crashing the server. Remove
the hard cap entirely and rework the memory model:

- zomboid.service: drop MemoryMax, lower MemorySwapMax 2G->1G (overflow buffer)
- installer: set heap once at install — Xms=2g fixed floor + Xmx=half of
  physical RAM (real, survivable guardrail); idempotent JVM-args rewrite
- remove the dynamic RAM configurator: delete setram.sh and the
  `pzm config ram` command (RAM is no longer tunable post-install)
- docs: document the new RAM policy; fix TROUBLESHOOTING (JVM args live in
  ProjectZomboid64.json, not a JAVA_OPTS env in the service)